--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>#SaveDXMP# Home</title>
+	<link rel="stylesheet" type="text/css" href="/style/dxmp.css">
+</head>
 <body>
-<h1>Hello World</h1>
+	<div id="headmain" class="localcontainer">
+		<div class="bigbanner"></div>
+	</div>
 </body>
 </html>
