--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
 	<link rel="stylesheet" type="text/css" href="/style/dxmp.css">
 </head>
 <body>
+<br>
+<table align="center">
+	<tbody>
+		<tr>
+			<td class="introd">
+				<img src="introd.png">
+			</td>
+		</tr>
+		<tr>
+			<td class="text">
+				    LIST:
+					░<a href="dx.htm">deus ex</a>░
+					░<a href="ut.htm">unreal</a>░
+					░<a href="win.htm">windows</a>░
+					░<a href="misc.htm">other</a>░
+					░<a href="cas.htm">casino</a>░
+					░<a href="fight.htm">fighter</a>░
+					░<a href="winner.htm">winner?</a>░
+					░<a href="theen.htm">the end</a>░
+			</td>
+		</tr>
+	</tbody>
+</table>
 	<div id="headmain" class="localcontainer">
 		<div class="bigbanner"></div>
 	</div>
