--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table align="center">
 	<tbody>
 		<tr>
-			<td class="introd">
+			<td class="localcontainer bodyColor blackBorder">
 				<img src="introd.png">
 			</td>
 		</tr>
