--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <table align="center">
 	<tbody>
 		<tr>
-			<td class="localcontainer bodyColor blackBorder">
+			<td id="introduction" class="localcontainer bodyColor blackBorder">
 				<img src="introd.png">
 			</td>
 		</tr>
 		<tr>
-			<td class="text">
+			<td class="localcontainer bodyColor blackBorder">
 				    LIST:
 					░<a href="dx.htm">deus ex</a>░
 					░<a href="ut.htm">unreal</a>░
