--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
 		</tr>
 		<tr>
 			<td class="localcontainer bodyColor blackBorder">
-				    LIST:
-					░<a href="dx.htm">deus ex</a>░
-					░<a href="ut.htm">unreal</a>░
-					░<a href="win.htm">windows</a>░
-					░<a href="misc.htm">other</a>░
-					░<a href="cas.htm">casino</a>░
-					░<a href="fight.htm">fighter</a>░
-					░<a href="winner.htm">winner?</a>░
-					░<a href="theen.htm">the end</a>░
+				<p>SaveDXMP</p> <hr>
 			</td>
 		</tr>
 	</tbody>
