Upload banner items

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<tbody>
 		<tr>
 			<td id="introduction" class="localcontainer bodyColor blackBorder">
-				<img src="introd.png">
+				<img src="/img/banner.png">
 			</td>
 		</tr>
 		<tr>
