--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</tr>
 		<tr>
 			<td class="localcontainer bodyColor blackBorder">
-				<strong>SaveDXMP</strong>
+				<strong>SaveDXMP - INDEX</strong>
 			</td>
 		</tr>
 	</tbody>
