--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <table align="center">
 	<tbody>
 		<tr>
-			<td id="introduction" class="localcontainer bodyColor blackBorder">
+			<td id="introduction" class="localpiccontainer bodyColor blackBorder">
 				<img src="/img/banner.png">
 			</td>
 		</tr>
