--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="/style/dxmp.css">
 </head>
 <body>
+	<div id="introductionheader" class="localpiccontainer bodyColor blackBorder spacerBottom">
+		<div class="banner">
+			<img src="/img/banner.png">
+		</div>
+		<div class="grid_main"><strong>SaveDXMP - Index</strong></div>
+		<div class="grid_main"><span class="offline">TEST</span></div>
+	</div>
+
 <table align="center">
 	<tbody>
 		<tr>
