--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<div class="banner">
 			<img src="/img/banner.png">
 		</div>
-		<div class="grid_main localpiccontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong></div>
-		<div class="grid_main localpiccontainer bodyColor blackBorder spacerBottom"><span class="offline">TEST</span></div>
+		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong></div>
+		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><span class="offline">TEST</span></div>
 	</div>
 </body>
 </html>
