--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<img src="/img/banner.png">
 		</div>
 		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong></div>
-		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><span class="offline">TEST</span></div>
+		<div id="deusexlist" class="grid_main localcontainer bodyColor blackBorder spacerBottom"><span class="offline">TEST</span></div>
+		<script src="fetch.js"></script>
 	</div>
 </body>
 </html>
