--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<div class="banner">
 			<img src="/img/banner.png">
 		</div>
-		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong></div>
-		<div id="deusexlist" class="grid_main localcontainer bodyColor blackBorder spacerBottom"><span class="offline">TEST</span></div>
+		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong><span class="offline">TEST</span></div>
 		<script src="fetch.js"></script>
+		<div id="deusexlist" class="grid_main localcontainer bodyColor blackBorder spacerBottom">
+		</div>
 	</div>
 </body>
 </html>
