--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 		</div>
 		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong><span class="offline">TEST</span></div>
 		<script src="fetch.js"></script>
-		<div id="deusexlist" class="grid_main localcontainer bodyColor blackBorder spacerBottom">
+		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom">
+			<ul id="deusexlist">
+				<li>Loading...</li>
+			</ul>
 		</div>
 	</div>
 </body>
