--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div class="banner">
 			<img src="/img/banner.png">
 		</div>
-		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong><span class="offline">TEST</span></div>
+		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom"><strong>SaveDXMP - Index</strong><span class="online">ONLINE</span></div>
 		<script src="fetch.js"></script>
 		<div class="grid_main localcontainer bodyColor blackBorder spacerBottom">
 			<ul id="deusexlist">
